# qmenta-sdk-tool-tutorial

./: .gitignore  Description  Dockerfile  README.md  settings.json  tool.py
local_tools/ants_tool_maker_tutorial/: README.md  pyproject.toml  results_configuration.json  settings.json  tool.py
local_tools/ants_tool_maker_tutorial/local/: requirements.txt
local_tools/ants_tool_maker_tutorial/local/test/: test_tool.py
local_tools/ants_tool_maker_tutorial/local/test/test_basic_call/input_folder/: setting_values.json
local_tools/qmenta_sdk_tool_maker_tutorial/: README.md  description.html  pyproject.toml  results_configuration.json  settings.json  tool.py
local_tools/qmenta_sdk_tool_maker_tutorial/local/test/: test_tool.py
local_tools/qmenta_sdk_tool_maker_tutorial/local/test/test_basic_call/input_folder/: setting_values.json
pyradiomics/: settings_values.json  test_local_sdk.sh
