[project]
name = "qmenta-sdk-tool-maker-tutorial"
version = "1.0"
description = ""
authors = [
    {name = "Marc Ramos",email = "marc@qmenta.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simpleitk (>=2.5.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "nibabel (>=5.3.2,<6.0.0)",
    "qmenta-sdk-lib (>=2.0,<3.0)",
    "pyradiomics (>=3.0,<3.1)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "<2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
